Fix casing of scrollbarwidth

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -914,7 +914,7 @@ select.ui.dropdown {
 @media all and (-ms-high-contrast:none) {
   .ui.scrolling.dropdown .menu,
   .ui.dropdown .scrolling.menu {
-    min-width: ~"calc(100% - "@scrollBarWidth~")";
+    min-width: ~"calc(100% - "@scrollbarWidth~")";
   }
 }
 @media only screen and (max-width : @largestMobileScreen) {
